@@ -3452,6 +3452,10 @@ PSDeviceDriver(pDevDesc dd, const char *file, const char *paper,
     dd->textUTF8      = PS_TextUTF8;
     dd->strWidthUTF8  = PS_StrWidthUTF8;
     dd->useRotatedTextInContour = TRUE;
+    dd->haveTransparency = 3; /* fully transparent */
+    dd->haveRaster = 3; /* non-missing colours */
+    dd->haveCapture = 1;
+    dd->haveLocator = 1;
 
     dd->deviceSpecific = (void *) pd;
     dd->displayListOn = FALSE;
@@ -4972,6 +4976,10 @@ XFigDeviceDriver(pDevDesc dd, const char *file, const char *paper,
     dd->mode	   = XFig_Mode;
     dd->hasTextUTF8 = FALSE;
     dd->useRotatedTextInContour = FALSE; /* maybe */
+    dd->haveTransparency = 1;
+    dd->haveRaster = 1;
+    dd->haveCapture = 1;
+    dd->haveLocator = 1;
 
     dd->deviceSpecific = (void *) pd;
     dd->displayListOn = FALSE;
@@ -6246,6 +6254,10 @@ PDFDeviceDriver(pDevDesc dd, const char *file, const char *paper,
     dd->textUTF8       = PDF_TextUTF8;
     dd->strWidthUTF8   = PDF_StrWidthUTF8;
     dd->useRotatedTextInContour = TRUE;
+    dd->haveTransparency = 4;
+    dd->haveRaster = 2;
+    dd->haveCapture = 1;
+    dd->haveLocator = 1;
 
     dd->deviceSpecific = (void *) pd;
     dd->displayListOn = FALSE;
