@@ -2762,6 +2762,10 @@ Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
 	dd->text = dd->textUTF8 = Cairo_Text;
 #endif
 	dd->holdflush = Cairo_holdflush;
+	dd->haveTransparency = 4;
+	dd->haveRaster = 2;
+	dd->haveCapture = (xd->type > WINDOW) ? 1 : 2;
+	dd->haveLocator = (xd->type > WINDOW) ? 1 : 2;
     } else
 #endif
     {
@@ -2784,6 +2788,11 @@ Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
 	dd->canGenMouseUp = TRUE;
 	dd->canGenMouseMove = TRUE;
 	dd->canGenKeybd = TRUE;
+
+	dd->haveTransparency = 1;
+	dd->haveRaster = 3;
+	dd->haveCapture = (xd->type > WINDOW) ? 1 : 2;
+	dd->haveLocator = (xd->type > WINDOW) ? 1 : 2;
     }
 
     dd->activate = X11_Activate;
